fix: add gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,38 +1,3 @@
-Modeling/ML/Summary/src/Sequential3.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/reg_lm_slides4.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/regression_visualization.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/tree1.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/Sequential1.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/introImage.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/lambdaAndB.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/reg_lm_slide6.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/regressionEquation2.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/reg_lm_slides1.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/reg_lm_slides2.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/reg_lm_slides5.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/ridgePrediction.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/T-squared-Test.pdf filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/objectiveFunction.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/slide3.jpg filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/RL_reg2.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/Sequential2.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/Sequential4.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/arraySyntaxImage.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/heatmapPlotDefault.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/lambdaVectorPrediction.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/tableVsArraySyntax.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/slide1.jpg filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/slide4.jpg filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/GPR_Intro.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/RL_reg1.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/lm_quiz.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/reg_lm_slide7.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/reg_lm_slides3.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/dummyvarImage.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/introImage1.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/matlabMLflow.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/biplot1.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/introImage2.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/parallel.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/tree2.png filter=lfs diff=lfs merge=lfs -text
-Modeling/ML/Summary/src/slide2.jpg filter=lfs diff=lfs merge=lfs -text
+**/*.png filter=lfs diff=lfs merge=lfs -text
+**/*.pdf filter=lfs diff=lfs merge=lfs -text
+**/*.jpg filter=lfs diff=lfs merge=lfs -text
